# solitaireformom

./: Cargo.toml
src/: main.rs
